--------------------------------------------------------------------------------
yjh 26.06.2022 01:28:46 +0300 - build 5986

1. SQLite v3.39.0.

--------------------------------------------------------------------------------
drkns 25.06.2022 23:06:40 +0100 - build 5985

1. Refactoring.

--------------------------------------------------------------------------------
drkns 24.06.2022 20:41:44 +0100 - build 5984

1. Add color picker dialog help page.

2. UI colors can be reset separately.

--------------------------------------------------------------------------------
drkns 23.06.2022 19:19:19 +0100 - build 5983

1. Workaround for broken half-width surrogates (e.g. "𝔟𝔞𝔫𝔞𝔫𝔞") in conhost & WT.

--------------------------------------------------------------------------------
drkns 22.06.2022 23:59:59 +0100 - build 5982

1. gh-532: Copy file bigger than target file system can store.
   Do not proceed if we can't reserve the space for the file.

--------------------------------------------------------------------------------
EugeneManushkin 22.06.2022 14:09:17 +0300 - build 5981

1. Allow run modal editor with XC_OPEN_NEWINSTANCE exit code. This fix invalid EF_OPENMODE_NEWIFOPEN flag behaviour #530.

--------------------------------------------------------------------------------
drkns 20.06.2022 22:32:45 +0100 - build 5980

1. Allow sourcing of keyboard mappings from xlat tables.

2. Minor refactoring.

--------------------------------------------------------------------------------
drkns 12.06.2022 20:20:20 +0100 - build 5979

1. 256 color palette support.

2. More "style" attributes: inverse, invisible.

3. Minor fixes.

--------------------------------------------------------------------------------
drkns 08.06.2022 23:20:56 +0100 - build 5978

1. Refactoring.

--------------------------------------------------------------------------------
drkns 07.06.2022 01:31:20 +0100 - build 5977

1. More logging.
