@@ -1,4 +1,11 @@
 --------------------------------------------------------------------------------
+drkns 26.06.2022 21:57:48 +0100 - build 5987
+
+1. Continue 5985.
+
+2. #0003950 - excessive attempts to set the owner when working with folders.
+
+--------------------------------------------------------------------------------
 yjh 26.06.2022 01:28:46 +0300 - build 5986
 
 1. SQLite v3.39.0.
